# fine

./: CHANGELOG.md  README.md  fine.cabal
app/: DebugMode.hs  Main.hs
lib/: BasicChecker.hs  HindleyMilner.hs  Imp.hs  Refinements.hs  STLC.hs  Solve.hs  Surface.hs  Typecheck.hs  Util.hs
